optimisation légère de la recherche coupable heuristique